--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -34,10 +34,10 @@
     "inputRev?": "master",
     "inherited": false}},
   {"git":
-   {"url": "https://github.com/leanprover/std4",
+   {"url": "https://github.com/JamesGallicchio/std4",
     "subDir?": null,
-    "rev": "b5f7bd40d2162fe148e585543f284a5d8cc0ef26",
+    "rev": "5806bb31b4431f651a36e26404e4f5a617c065ec",
     "opts": {},
     "name": "std",
-    "inputRev?": "main",
+    "inputRev?": "chore/move-Data/List/Pairwise.lean",
     "inherited": false}}]}
