--- a/.github/workflows/build.yml.in
+++ b/.github/workflows/build.yml.in
@@ -86,6 +86,10 @@ jobs:
         run: |
           find . -name . -o -prune -exec rm -rf -- {} +
 
+      # The Hoskinson runners may not have jq installed, so do that now.
+      - name: 'Setup jq'
+        uses: dcarbone/install-jq-action@v1.0.1
+
       - name: install elan
         run: |
           set -o pipefail
@@ -101,12 +105,20 @@ jobs:
         run: |
           find Mathlib -name "*.lean" | LC_ALL=C sort | sed 's/\.lean//;s,/,.,g;s/^/import /' > Mathlib.lean
 
+      - name: If using a lean-pr-release toolchain, uninstall
+        run: |
+          if [[ `cat lean-toolchain` =~ ^leanprover/lean4-pr-releases:pr-release-[0-9]+$ ]]; then
+            echo "Uninstalling transient toolchain `cat lean-toolchain`"
+            elan toolchain uninstall `cat lean-toolchain`
+          fi
+
       - name: get cache
         run: |
           lake exe cache clean
           lake exe cache get
 
       - name: build mathlib
+        id: build
         uses: liskin/gh-problem-matcher-wrap@v2
         with:
           linters: gcc
@@ -140,13 +152,75 @@ jobs:
           build/bin/checkYaml
 
       - name: test mathlib
+        id: test
         run: make -j 8 test
 
       - name: lint mathlib
+        id: lint
         uses: liskin/gh-problem-matcher-wrap@v2
         with:
           linters: gcc
           run: env LEAN_ABORT_ON_PANIC=1 make lint
+
+      - name: Post comments for lean-pr-testing branch
+        if: always()
+        env:
+          TOKEN: ${{ secrets.LEAN_PR_TESTING }}
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+          WORKFLOW_URL: ${{ github.event.workflow_run.html_url }}
+        run: |
+          # Extract branch name and check if it matches the pattern
+          branch_name=$(echo "$GITHUB_CONTEXT" | jq -r .ref | cut -d'/' -f3)
+          if [[ "$branch_name" =~ ^lean-pr-testing-([0-9]+)$ ]]; then
+            pr_number="${BASH_REMATCH[1]}"
+            current_time=$(date "+%Y-%m-%d %H:%M:%S")
+
+            echo "This is a 'lean-pr-testing-$pr_number' branch, so we need to write a comment."
+
+            # Use GitHub API to check if a comment already exists
+            existing_comment=$(curl -H "Authorization: token $TOKEN" \
+                                    -H "Accept: application/vnd.github.v3+json" \
+                                    "https://api.github.com/repos/leanprover/lean/issues/$pr_number/comments" \
+                                    | jq '.[] | select(.body | startswith("✅ Mathlib has") or startswith("💥 Mathlib build"))')
+            existing_comment_id=$(echo "$existing_comment" | jq -r .id)
+            existing_comment_body=$(echo "$existing_comment" | jq -r .body)
+
+            # Depending on the success/failure, set the appropriate message
+            if ${{ steps.lint.outcome == 'success' }}; then
+              message="✅ Mathlib has successfully built against this PR. ($current_time)"
+            elif ${{ steps.test.outcome == 'success' }}; then
+              message="❌ Mathlib built against this PR, but linting failed. ($current_time) [View Log]($WORKFLOW_URL)"
+            elif ${{ steps.built.outcome == 'success' }}; then
+              message="❌ Mathlib built against this PR, but testing failed. ($current_time) [View Log]($WORKFLOW_URL)"
+            else
+              message="💥 Mathlib build failed against this PR. ($current_time) [View Log]($WORKFLOW_URL)"
+            fi
+
+            echo $message
+
+            # Append new result to the existing comment or post a new comment
+            if [ -z "$existing_comment_id" ]; then
+              # Post new comment with a bullet point
+              echo "Posting as new comment at leanprover/lean/issues/$pr_number/comments"
+              curl -s \
+                -X POST \
+                -H "Authorization: token $TOKEN" \
+                -H "Accept: application/vnd.github.v3+json" \
+                -d "{\"body\":\"- $message\"}" \
+                "https://api.github.com/repos/leanprover/lean/issues/$pr_number/comments"
+            else
+              # Append new result to the existing comment
+              echo "Appending to existing comment at leanprover/lean/issues/$pr_number/comments"
+              updated_comment_body="$existing_comment_body\n- $message"
+              curl -s \
+                -X PATCH \
+                -H "Authorization: token $TOKEN" \
+                -H "Accept: application/vnd.github.v3+json" \
+                -d "{\"body\":\"$updated_comment_body\"}" \
+                "https://api.github.com/repos/leanprover/lean/issues/comments/$existing_comment_id"
+            fi
+          fi
+
 
   final:
     name: Post-CI jobJOB_NAME
