switch back to aesop master

--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -26,17 +26,17 @@
     "inputRev?": "master",
     "inherited": false}},
   {"git":
-   {"url": "https://github.com/semorrison/aesop",
+   {"url": "https://github.com/JLimperg/aesop",
     "subDir?": null,
-    "rev": "a45d474666e76fa12e307d11436bd3640e4c698f",
+    "rev": "1a0cded2be292b5496e659b730d2accc742de098",
     "opts": {},
     "name": "aesop",
-    "inputRev?": "v4.0.0-rc4",
+    "inputRev?": "master",
     "inherited": false}},
   {"git":
    {"url": "https://github.com/leanprover/std4",
     "subDir?": null,
-    "rev": "7194b6b9b074e15c490e59491843bcd0f0feda68",
+    "rev": "dd3a248c2a22c37644ad21029ecfa38f6a36d813",
     "opts": {},
     "name": "std",
     "inputRev?": "main",
