--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -34,9 +34,9 @@
     "inputRev?": "master",
     "inherited": false}},
   {"git":
-   {"url": "https://github.com/leanprover/std4",
+   {"url": "https://github.com/hrmacbeth/std4",
     "subDir?": null,
-    "rev": "dd3a248c2a22c37644ad21029ecfa38f6a36d813",
+    "rev": "57653e5f85f266e3032a9c2556340e324bb5e1cf",
     "opts": {},
     "name": "std",
     "inputRev?": "main",
