--- a/.github/workflows/bors.yml
+++ b/.github/workflows/bors.yml
@@ -100,6 +100,12 @@ jobs:
         run: |
           find . -name . -o -prune -exec rm -rf -- {} +
 
+      # The Hoskinson runners may not have jq installed, so do that now.
+      - name: Install jq
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y jq
+
       - name: install elan
         run: |
           set -o pipefail
@@ -171,11 +177,6 @@ jobs:
         with:
           linters: gcc
           run: env LEAN_ABORT_ON_PANIC=1 make lint
-
-      # The Hoskinson runners may not have jq installed, so do that now.
-      - name: Install jq
-        if: always()
-        run: sudo apt-get install jq
 
       - name: Post comments for lean-pr-testing branch
         if: always()
