--- a/.github/workflows/bors.yml
+++ b/.github/workflows/bors.yml
@@ -121,7 +121,7 @@ jobs:
 
       - name: If using a lean-pr-release toolchain, uninstall
         run: |
-          if [[ `cat lean-toolchain` =~ ^leanprover:lean-pr-releases/pr-release-[0-9]+$ ]]; then
+          if [[ `cat lean-toolchain` =~ ^leanprover/lean4-pr-releases:pr-release-[0-9]+$ ]]; then
             echo "Uninstalling transient toolchain `cat lean-toolchain`"
             elan toolchain uninstall `cat lean-toolchain`
           fi
