--- a/.github/workflows/build.yml.in
+++ b/.github/workflows/build.yml.in
@@ -175,7 +175,43 @@ jobs:
             pr_number="${BASH_REMATCH[1]}"
             current_time=$(date "+%Y-%m-%d %H:%M:%S")
 
-            echo "This is a 'lean-pr-testing-$pr_number' branch, so we need to write a comment."
+            echo "This is a 'lean-pr-testing-$pr_number' branch, so we need to adjust labels and write a comment."
+
+            if ${{ steps.lint.outcome == 'success' }}; then
+              curl -L \
+                -X DELETE \
+                -H "Accept: application/vnd.github+json" \
+                -H "Authorization: Bearer $TOKEN" \
+                -H "X-GitHub-Api-Version: 2022-11-28" \
+                https://api.github.com/repos/leanprover/lean4/issues/$pr_number/labels/awaiting-mathlib-build
+              curl -L \
+                -X DELETE \
+                -H "Accept: application/vnd.github+json" \
+                -H "Authorization: Bearer $TOKEN" \
+                -H "X-GitHub-Api-Version: 2022-11-28" \
+                https://api.github.com/repos/leanprover/lean4/issues/$pr_number/labels/breaks-mathlib
+              curl -L \
+                -X POST \
+                -H "Accept: application/vnd.github+json" \
+                -H "Authorization: Bearer $TOKEN" \
+                -H "X-GitHub-Api-Version: 2022-11-28" \
+                https://api.github.com/repos/leanprover/lean4/issues/$pr_number/labels \
+                -d '{"labels":["successful-mathlib-build"]}'
+            else
+              curl -L \
+                -X DELETE \
+                -H "Accept: application/vnd.github+json" \
+                -H "Authorization: Bearer $TOKEN" \
+                -H "X-GitHub-Api-Version: 2022-11-28" \
+                https://api.github.com/repos/leanprover/lean4/issues/$pr_number/labels/successful-mathlib-build
+              curl -L \
+                -X POST \
+                -H "Accept: application/vnd.github+json" \
+                -H "Authorization: Bearer $TOKEN" \
+                -H "X-GitHub-Api-Version: 2022-11-28" \
+                https://api.github.com/repos/leanprover/lean4/issues/$pr_number/labels \
+                -d '{"labels":["breaks-mathlib"]}'
+            fi
 
             # Use GitHub API to check if a comment already exists
             existing_comment=$(curl -H "Authorization: token $TOKEN" \
@@ -220,7 +256,6 @@ jobs:
                 "https://api.github.com/repos/leanprover/lean/issues/comments/$existing_comment_id"
             fi
           fi
-
 
   final:
     name: Post-CI jobJOB_NAME
