--- a/.github/workflows/build_fork.yml
+++ b/.github/workflows/build_fork.yml
@@ -214,14 +214,14 @@ jobs:
                 -H "Authorization: Bearer $TOKEN" \
                 -H "X-GitHub-Api-Version: 2022-11-28" \
                 https://api.github.com/repos/leanprover/lean4/issues/$pr_number/labels \
-                -d '{"labels":["successful-mathlib-build"]}'
+                -d '{"labels":["builds-mathlib"]}'
             else
               curl -L -s \
                 -X DELETE \
                 -H "Accept: application/vnd.github+json" \
                 -H "Authorization: Bearer $TOKEN" \
                 -H "X-GitHub-Api-Version: 2022-11-28" \
-                https://api.github.com/repos/leanprover/lean4/issues/$pr_number/labels/successful-mathlib-build
+                https://api.github.com/repos/leanprover/lean4/issues/$pr_number/labels/builds-mathlib
               curl -L -s \
                 -X POST \
                 -H "Accept: application/vnd.github+json" \
