--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -198,18 +198,21 @@ jobs:
             echo "This is a 'lean-pr-testing-$pr_number' branch, so we need to adjust labels and write a comment."
 
             if ${{ steps.lint.outcome == 'success' }}; then
+              echo "Removing label awaiting-mathlib-build"
               curl -L -s \
                 -X DELETE \
                 -H "Accept: application/vnd.github+json" \
                 -H "Authorization: Bearer $TOKEN" \
                 -H "X-GitHub-Api-Version: 2022-11-28" \
                 https://api.github.com/repos/leanprover/lean4/issues/$pr_number/labels/awaiting-mathlib-build
+              echo "Removing label breaks-mathlib"
               curl -L -s \
                 -X DELETE \
                 -H "Accept: application/vnd.github+json" \
                 -H "Authorization: Bearer $TOKEN" \
                 -H "X-GitHub-Api-Version: 2022-11-28" \
                 https://api.github.com/repos/leanprover/lean4/issues/$pr_number/labels/breaks-mathlib
+              echo "Adding label builds-mathlib"
               curl -L -s \
                 -X POST \
                 -H "Accept: application/vnd.github+json" \
@@ -218,12 +221,14 @@ jobs:
                 https://api.github.com/repos/leanprover/lean4/issues/$pr_number/labels \
                 -d '{"labels":["builds-mathlib"]}'
             else
+              echo "Removing label builds-mathlib"
               curl -L -s \
                 -X DELETE \
                 -H "Accept: application/vnd.github+json" \
                 -H "Authorization: Bearer $TOKEN" \
                 -H "X-GitHub-Api-Version: 2022-11-28" \
                 https://api.github.com/repos/leanprover/lean4/issues/$pr_number/labels/builds-mathlib
+              echo "Adding label breaks-mathlib"
               curl -L -s \
                 -X POST \
                 -H "Accept: application/vnd.github+json" \
@@ -241,15 +246,16 @@ jobs:
             existing_comment_id=$(echo "$existing_comment" | jq -r .id)
             existing_comment_body=$(echo "$existing_comment" | jq -r .body)
 
+            branch="[lean-pr-testing-$pr_number](https://github.com/leanprover-community/mathlib4/compare/master...lean-pr-testing-$pr_number)"
             # Depending on the success/failure, set the appropriate message
             if ${{ steps.lint.outcome == 'success' }}; then
-              message="✅ Mathlib has successfully built against this PR. ($current_time)"
+              message="✅ Mathlib branch $branch has successfully built against this PR. ($current_time)"
             elif ${{ steps.test.outcome == 'success' }}; then
-              message="❌ Mathlib built against this PR, but linting failed. ($current_time) [View Log]($WORKFLOW_URL)"
+              message="❌ Mathlib branch $branch built against this PR, but linting failed. ($current_time) [View Log]($WORKFLOW_URL)"
             elif ${{ steps.built.outcome == 'success' }}; then
-              message="❌ Mathlib built against this PR, but testing failed. ($current_time) [View Log]($WORKFLOW_URL)"
+              message="❌ Mathlib branch $branch built against this PR, but testing failed. ($current_time) [View Log]($WORKFLOW_URL)"
             else
-              message="💥 Mathlib build failed against this PR. ($current_time) [View Log]($WORKFLOW_URL)"
+              message="💥 Mathlib branch $branch failed against this PR. ($current_time) [View Log]($WORKFLOW_URL)"
             fi
 
             echo $message
