--- a/.github/workflows/build_fork.yml
+++ b/.github/workflows/build_fork.yml
@@ -240,7 +240,7 @@ jobs:
             existing_comment=$(curl -L -s -H "Authorization: token $TOKEN" \
                                     -H "Accept: application/vnd.github.v3+json" \
                                     "https://api.github.com/repos/leanprover/lean4/issues/$pr_number/comments" \
-                                    | jq '.[] | select(.body | startswith("✅ Mathlib has") or startswith("💥 Mathlib build"))')
+                                    | jq '.[] | select(.body | startswith("✅ Mathlib") or startswith("❌ Mathlib") or startswith("💥 Mathlib"))')
             existing_comment_id=$(echo "$existing_comment" | jq -r .id)
             existing_comment_body=$(echo "$existing_comment" | jq -r .body)
 
