--- a/.github/workflows/bors.yml
+++ b/.github/workflows/bors.yml
@@ -182,6 +182,9 @@ jobs:
           TOKEN: ${{ secrets.LEAN_PR_TESTING }}
           GITHUB_CONTEXT: ${{ toJson(github) }}
           WORKFLOW_URL: ${{ github.event.workflow_run.html_url }}
+          LINT_OUTCOME: ${{ steps.lint.outcome }}
+          TEST_OUTCOME: ${{ steps.test.outcome }}
+          BUILD_OUTCOME: ${{ steps.build.outcome }}
         run: |
           scripts/lean-pr-testing-comments.sh
 
