--- a/.github/workflows/build.yml.in
+++ b/.github/workflows/build.yml.in
@@ -30,6 +30,10 @@ jobs:
       - name: Look for ignored files
         uses: credfeto/action-no-ignored-files@v1.1.0
 
+      - name: Check manifest is up to date
+        run: |
+          scripts/check-manifest.sh
+
       - name: Install bibtool
         if: ${{ 'STYLE_LINT_RUNNER' == 'ubuntu-latest' }}
         run: |
