--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -107,7 +107,7 @@ jobs:
   build:
     if: github.repository == 'leanprover-community/mathlib4'
     name: Build
-    runs-on: pr
+    runs-on: ubuntu-latest
     steps:
       - name: cleanup
         run: |
@@ -122,8 +122,8 @@ jobs:
       - name: install xxd
         if: ${{ 'ubuntu-latest' == 'ubuntu-latest' }}
         run: |
-          apt-get update
-          apt-get install -y xxd
+          sudo apt-get update
+          sudo apt-get install -y xxd
 
       - name: install elan
         run: |
