--- a/.github/workflows/bors.yml
+++ b/.github/workflows/bors.yml
@@ -158,8 +158,10 @@ jobs:
       - name: upload cache
         if: always()
         run: |
-          lake exe cache commit! || true
-          lake exe cache put! || true
+          # run this in CI if it gets an incorrect lake hash for existing cache files somehow
+          # lake exe cache pack! || true
+          lake exe cache commit || true
+          lake exe cache put || true
         env:
           MATHLIB_CACHE_SAS: ${{ secrets.MATHLIB_CACHE_SAS }}
 
