Revert "revert everything"
This reverts commit 35872fdcd827ef66fb0bfc1ec08f84ac3c55cd5c.

--- a/.github/workflows/bors.yml
+++ b/.github/workflows/bors.yml
@@ -158,10 +158,8 @@ jobs:
       - name: upload cache
         if: always()
         run: |
-          # run this in CI if it gets an incorrect lake hash for existing cache files somehow
-          # lake exe cache pack! || true
-          lake exe cache commit || true
-          lake exe cache put || true
+          lake exe cache commit! || true
+          lake exe cache put! || true
         env:
           MATHLIB_CACHE_SAS: ${{ secrets.MATHLIB_CACHE_SAS }}
 
