inspect ProofWidgets.Data.Json instead

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -150,9 +150,9 @@ jobs:
       - name: get cache
         run: |
           lake exe cache clean
-          rm ~/.cache/mathlib/088aeeb2871b7987.ltar || true
+          rm ~/.cache/mathlib/4c5ca804ed29bc79.ltar || true
           lake exe cache get
-          xxd -l 32 ~/.cache/mathlib/088aeeb2871b7987.ltar || true
+          xxd -l 32 ~/.cache/mathlib/4c5ca804ed29bc79.ltar || true
 
       - name: build mathlib
         id: build
@@ -172,20 +172,20 @@ jobs:
       - name: upload cache
         if: always()
         run: |
-          xxd -l 32 ~/.cache/mathlib/088aeeb2871b7987.ltar
-          lake exe cache pack! || true
-          xxd -l 32 ~/.cache/mathlib/088aeeb2871b7987.ltar
+          # xxd -l 32 ~/.cache/mathlib/4c5ca804ed29bc79.ltar
+          # lake exe cache pack! || true
+          xxd -l 32 ~/.cache/mathlib/4c5ca804ed29bc79.ltar
           lake exe cache commit! || true
-          xxd -l 32 ~/.cache/mathlib/088aeeb2871b7987.ltar
+          xxd -l 32 ~/.cache/mathlib/4c5ca804ed29bc79.ltar
           lake exe cache put! || true
         env:
           MATHLIB_CACHE_SAS: ${{ secrets.MATHLIB_CACHE_SAS }}
 
       - name: check the cache
         run: |
-          xxd -l 32 ~/.cache/mathlib/088aeeb2871b7987.ltar
+          xxd -l 32 ~/.cache/mathlib/4c5ca804ed29bc79.ltar
           lake exe cache get
-          xxd -l 32 ~/.cache/mathlib/088aeeb2871b7987.ltar
+          xxd -l 32 ~/.cache/mathlib/4c5ca804ed29bc79.ltar
           # We pipe the output of `lake build` to a file,
           # and if we find " Building " in that file we kill `lake build`, and error.
           lake build > tmp & tail --pid=$! -n +1 -F tmp | (! (grep -m 1 " Building " && kill $! ))
