--- a/.github/workflows/build_fork.yml
+++ b/.github/workflows/build_fork.yml
@@ -162,6 +162,7 @@ jobs:
       - name: upload cache
         if: always()
         run: |
+          lake exe cache pack! || true
           lake exe cache commit || true
           lake exe cache put || true
         env:
