chore: bump ProofWidgets to 0.0.15 (#7070)
We attempted this previously in #7044 and #7056, but it resulted in a broken cache.

Hopefully that is reproducible on this PR, and we can diagnose and fix before merging!



Co-authored-by: Scott Morrison <scott.morrison@gmail.com>
Co-authored-by: Mario Carneiro <di.gama@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -168,6 +168,8 @@ jobs:
       - name: upload cache
         if: always()
         run: |
+          # run this in CI if it gets an incorrect lake hash for existing cache files somehow
+          # lake exe cache pack! || true
           lake exe cache commit || true
           lake exe cache put || true
         env:
