--- a/.github/workflows/build_fork.yml
+++ b/.github/workflows/build_fork.yml
@@ -166,6 +166,8 @@ jobs:
       - name: upload cache
         if: always()
         run: |
+          # run this in CI if it gets an incorrect lake hash for existing cache files somehow
+          # lake exe cache pack! || true
           lake exe cache commit || true
           lake exe cache put || true
         env:
