--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -18,6 +18,14 @@
     "inputRev?": "nightly",
     "inherited": false}},
   {"git":
+   {"url": "https://github.com/lean-dojo/LeanInfer.git",
+    "subDir?": null,
+    "rev": "07a98e38b5819b36938916512c2da9ef25796f8a",
+    "opts": {},
+    "name": "LeanInfer",
+    "inputRev?": "v0.0.6",
+    "inherited": false}},
+  {"git":
    {"url": "https://github.com/gebner/quote4",
     "subDir?": null,
     "rev": "e75daed95ad1c92af4e577fea95e234d7a8401c1",
