--- a/.github/workflows/bors.yml
+++ b/.github/workflows/bors.yml
@@ -173,8 +173,8 @@ jobs:
         run: |
           lake exe cache get
           # We pipe the output of `lake build` to a file,
-          # and if we find " Building " in that file we kill `lake build`, and error.
-          lake build > tmp & tail --pid=$! -n +1 -F tmp | (! (grep -m 1 " Building " && kill $! ))
+          # and if we find " Building Mathlib" in that file we kill `lake build`, and error.
+          lake build > tmp & tail --pid=$! -n +1 -F tmp | (! (grep -m 1 " Building Mathlib" && kill $! ))
 
       - name: build archive
         run: |
