--- a/docs/overview.yaml
+++ b/docs/overview.yaml
@@ -19,7 +19,7 @@ General algebra:
     natural number: 'Nat'
     integer: 'Int'
     rational number: 'Rat'
-    continued fraction: 'RCF'
+    continued fraction: 'ContFract'
     real number: 'Real'
     extended real number: 'EReal'
     complex number: 'Complex'
