--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -5,10 +5,10 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "db125c954a3469b04e0e789a168e13324e57e57e",
+   "rev": "ec84a85926f27e3f23bb5050e58d8b4cddf95fd8",
    "name": "batteries",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "nightly-testing-2024-07-07",
+   "inputRev": "lean-pr-testing-4678",
    "inherited": false,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/leanprover-community/quote4",
